[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Graph patern auto recognition"
authors = ["Evgeniy Trubnikov <parmesanshees@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
rich = "^13.9.2"
logging = "^0.4.9.6"
spacy = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
